playlist update on 01/21/21:\n diff --git a/ytube/_data/lists/TEDs-keys.yml b/ytube/_data/lists/TEDs-keys.yml index 15044ba..be337e7 100644 --- a/ytube/_data/lists/TEDs-keys.yml +++ b/ytube/_data/lists/TEDs-keys.yml @@ -4,0 +5 @@ +- pczLRco6nyI # Jesse Draper at TEDxBayArea diff --git a/ytube/_data/lists/big-data-keys.yml b/ytube/_data/lists/big-data-keys.yml index c773745..4f1964d 100644 --- a/ytube/_data/lists/big-data-keys.yml +++ b/ytube/_data/lists/big-data-keys.yml @@ -4,0 +5,6 @@ +- oF_2uDb7DvQ # What is ETL | What is Data Warehouse | OLTP vs OLAP +- I32hmY4diFY # ETL Is Dead, Long Live Streams: real-time streams w/ Apache Kafka +- jyxS2bvQGxc # The War on Big Tech - Everything is About to Change +- c2Kf-rXI_pk # Google’s Hidden CIA Connection - The Full Story +- p8N0xN0ihMA # Scandal and Betrayal: The Story of How Twitter Started + diff --git a/ytube/_data/lists/capitalism-keys.yml b/ytube/_data/lists/capitalism-keys.yml index b73fa08..4bf9163 100644 --- a/ytube/_data/lists/capitalism-keys.yml +++ b/ytube/_data/lists/capitalism-keys.yml @@ -11,0 +12 @@ +- Bfe0GfRNIJg # Elon Musk on the Mass Exodus of Business from California diff --git a/ytube/_data/lists/clickbate-keys.yml b/ytube/_data/lists/clickbate-keys.yml index dda8b24..2156375 100644 --- a/ytube/_data/lists/clickbate-keys.yml +++ b/ytube/_data/lists/clickbate-keys.yml @@ -18,0 +19 @@ +- 6HERP5D6QYk # Dear New Youtubers.. Stop Doing This diff --git a/ytube/_data/lists/coding-keys.yml b/ytube/_data/lists/coding-keys.yml index 1dd7dfd..d8fefd3 100644 --- a/ytube/_data/lists/coding-keys.yml +++ b/ytube/_data/lists/coding-keys.yml @@ -20,0 +21 @@ +- Hfx6abgccWg # My 3 Simple Rules to Learn to Code diff --git a/ytube/_data/lists/economy-keys.yml b/ytube/_data/lists/economy-keys.yml index 8505206..e2c4282 100644 --- a/ytube/_data/lists/economy-keys.yml +++ b/ytube/_data/lists/economy-keys.yml @@ -25,0 +26 @@ +- uj7A29_9Z3M # Why 97% Will Lose EVERYTHING After 2020! | Robert Kiyosaki diff --git a/ytube/_data

--- a/ytube/_data/lists/all-videos-keys.yml
+++ b/ytube/_data/lists/all-videos-keys.yml
@@ -13132,3 +13132,111 @@
 
 
 
+- oF_2uDb7DvQ # What is ETL | What is Data Warehouse | OLTP vs OLAP
+- I32hmY4diFY # ETL Is Dead, Long Live Streams: real-time streams w/ Apache Kafka
+- jyxS2bvQGxc # The War on Big Tech - Everything is About to Change
+- c2Kf-rXI_pk # Google’s Hidden CIA Connection - The Full Story
+- p8N0xN0ihMA # Scandal and Betrayal: The Story of How Twitter Started
+
+- Bfe0GfRNIJg # Elon Musk on the Mass Exodus of Business from California
+
+- 6HERP5D6QYk # Dear New Youtubers.. Stop Doing This
+- Hfx6abgccWg # My 3 Simple Rules to Learn to Code
+
+- uj7A29_9Z3M # Why 97% Will Lose EVERYTHING After 2020! | Robert Kiyosaki
+- F9-D39fyQCU # We should TAKE ACTION as Quickly as We Can - Elon Musk | Create Quantum Wealth 2021
+- Oh6iX6gDU6k # Why Facebook is Dying - And How it's Trying to Survive
+
+
+
+
+- y8H9Qgppb9E # Elon Musk - Why 97% Will Be Affected By This In The Near Future - Elon Musk Interview 2021.
+- aMeZKXuauUY # Mike Maples: Astronauts
+- jOhPdJvZ4cg # Pando Founder Sarah Lacy Launches Chairman Mom: A New Platform to Rebrand Working Motherhood
+- uegOUmgKB4E # PandoMonthly: Fireside Chat With Elon Musk
+- NIsYT1rqW5w # Elon Musk: How Kleiner Perkins Lost Tesla
+- qv-kvq3lfmI # Sarah Lacy: Silicon Valley Reporter and Author | Revolution Season 1 | BrianSolisTV
+- EnQS0En3u4k # Sarah Lacy: Uber Exec Commented at Table Full of Journalists
+- zk3WP4XtWtw # A fireside chat with SoulCycle co-founders Elizabeth Cutler and Julie Rice
+- KCCqWxdTqQE # Disrupt Backstage: Sarah Lacy and Shervin Pishevar
+- 4L9Lggg2Odk # Silicon Valley's Morality Crash - Sarah Lacy (Pando)
+- bm45kufohoY # The Tables Turned: Evernote's Phil Libin Interviews Sarah Lacy
+- iEzxdoVCmCA # Sarah Lacy returns
+- eC3BhBIz8zA # Mark Zuckerberg Interview with Sarah Lacy at SXSWi
+- 9gOw3joU4a8 # Data Warehouse Interview Questions And Answers | Data Warehouse Tutorial | Edureka
+- hf5ujkGQ_WU # Sarah Lacy on Entrepreneurship
+- glbXE4pGcMI # PandoMonthly Presents: A Fireside Chat With Jeremy Levine
+- BbApY5yaKhU # A Fireside Chat With Bijan Sabet
+- 6yPfxcqEXhE # PandoMonthly: Fireside Chat With Airbnb CEO Brian Chesky
+- ayhfMr1EfRA # A fireside chat with John Doerr
+- 17UnqwVvfSc # PandoMonthly: Fireside Chat With Foursquare CEO Dennis Crowley
+- Q8fqMYZsJBk # When Elon Musk Realized China's Richest Man Is A Dope (Jack Ma)
+- 3HIIS_xjXSA # PandoMonthly: The full fireside chat with Care.com CEO Sheila Liriwo Marcelo
+- dPh7-6XzVS4 # PandoMonthly: Fireside Chat With Path CEO Dave Morin
+- SiIWcoeWeN8 # Elon Musk Interview on Valley Girl Show with Jesse Draper (Part 1)
+- MIMy02htWAY # Elon Musk Interview on Valley Girl Show with Jesse Draper (Part 2)
+- s5dBKXhdIvA # G Chahal Interview on Valley Girl Show with Jesse Draper (Part 1)
+- XsZOwyV0YkM # Gurbaksh Chahal Interview on Valley Girl Show with Jesse Draper (Part 2)
+- p6taTMa4nls # PandoMonthly: Fireside Chat With Peter Thiel
+- j2wePlwIK6w # PandoMonthly: Fireside Chat With Spotify CEO Daniel Ek
+- bvK-Li6tAEo # I got rejected by Google
+- dRHsg6hWcNo # 25 Ways To Make MONEY With CODE
+- 2AL_9_lfnjY # How I Went From $10,000 To $100,000+ Salary (Software Engineer)
+- zQdJ39Kyq7A # Pando Monthly Presents: A Fireside Chat with Jeff Weiner
+- X-iesHfbsd4 # A Fireside Chat With Dick Costolo
+- sqI7fa04atc # PandoMonthly: Fireside Chat With Ben Horowitz
+- Fgn2fhZBAVA # PandoMonthly: Fireside Chat With Instagram Founder Kevin Systrom
+- iqUG2_cmZ6I # PandoMonthly: A Fireside Chat With Sarah Lacy And Chris Sacca
+- 08wTlk6dYV0 # SoulCycle superstar Stacey Griffith dishes on her new book
+- 8MR9koswSyI # PandoMonthly: Fireside Chat With Zappos CEO Tony Hsieh
+- y04gnM57Sow # PandoMonthly: Fireside Chat With Nasty Gal CEO Sophia Amoruso
+
+- 8Sj2tbh-ozE # Introduction To Marketing | Marketing 101
+- BPK_qzeH_yk # Seth Godin - Everything You (probably) DON'T Know about Marketing
+- dBIq0KArHFE # 3 Principles to Improve Your Logo Design Process - Legibility, Hierarchy, and Contrast
+- h8yjthFnHEA # 14 Trends in Graphic Design for 2021
+- RKXZ7t_RiOE # Pricing Design Work & Creativity
+- pnymSjlWmCE # Graphic Design Trends 2021
+- bu_UC-9kwiQ # EXPERT VS AMATEUR: 4 Before & After Design Examples
+- 0nVNU5GFhm8 # How To Get Attention In The Market
+- aRAnI2PFfk4 # TOP DESIGN TRENDS 2021: Should You Follow Graphic Design Trends!?
+
+
+
+
+- sqhvcrOPOXE # Donald Trump Vs Nancy Pelosi: The Most Epic Clashes of All Time
+- Rg9iGvd5qb8 # My last talk with President Trump | Rudy Giuliani
+
+
+- tCnzsfkzRWI # PandoDaily’s Sarah Lacy Says Uber Threatened Her
+- 4mJcbQC96vk # Immigration Officer Outsmarts Man WIth Fake Documents | UK Border Force | Real Responders
+- i3Nz4IhFGgw # Tired Teacher Puts on 'Happy Face' Before Class | NowThis
+- _VcNQmAL6jc # Meet the Tech Journalist Silicon Valley Hates
+- F7SIAdl_Hps # Sarah Lacy: Uber CEO Travis Kalanick is Morally Corrupt
+- 5VLj0z-Es-M # Very Cucked Trump Doesn't Pardon Assange
+- T6Je9vVE_R0 # Sarah Lacy accepts the Ice Bucket Challenge
+- tY-IYY0yJdE # Elon Musk Funniest Moments
+- fgQPj90OrQE # Why Uber Is A Scam - Math Explains
+- eCL2zEg1rP0 # Elon Musk Calls Robert Reich A Moron
+- J49el9Fl8lM # Google Interview Experience | Accepted... then Rejected
+
+- sHPY8zIhy60 # What is Data Governance?
+- _dFJOSR-aFs # Service-Oriented Architecture
+- kJcd6xVK2lY # ELT vs ETL - A Pizza Comparison
+- 7s_S5Hkm7z0 # What is Middleware? Service Oriented Architecture Explained
+- SZwd04-1LMA # An Introduction to Data Governance (Part 1 of 2)
+- G4uDWtGVsQc # An Introduction to Data Governance (Part 2 of 2)
+- IF5YrYiV0sA # ETL vs ELT
+- 6yG2myKcMQE # Apache Kafka vs. Integration Middleware (MQ, ETL, ESB) - Friends, Enemies or Frenemies?
+- dspdToaROn8 # DQ vs MDM
+- vZhSbs1xLx4 # Get Rid of Traditional ETL, Move to Spark! (Bas Geerdink)
+- mDNGIqV2ThM # Building Real Time BI Systems with Kafka, Spark & Kudu: Spark Summit East talk by Ruhollah Farchtchi
+- YvVf97xeYkw # Neha Narkhede | Kafka Summit London 2019 Keynote | Event Streaming: Our Cloud-Native Journey Lessons
+- tpspO9K28PM # Four Distributed Systems Architectural Patterns by Tim Berglund
+- E8-e-3fRHBw # Managing Data in Microservices
+- UEg40Te8pnE # Introduction to Apache Kafka by James Ward
+- Hjae0Cw9oew # GOTO 2017 • Stream All Things - Patterns of Modern Data Integration • Gwen Shapira
+- pczLRco6nyI # Jesse Draper at TEDxBayArea
+
+
+
