--- a/ytube/_data/lists/big-data-keys.yml
+++ b/ytube/_data/lists/big-data-keys.yml
@@ -2,3 +2,9 @@
 - 73QC3qw5b2Y # What do DATA ENGINEERS do? Is data engineering a good career choice in 2020?
 - -K9SjrWpeys # Data Engineering and Data Science: Bridging the Gap | DataEDGE 2016
 - vNNoNs_VeWc # How to Become a Data Engineer in 2020
+- oF_2uDb7DvQ # What is ETL | What is Data Warehouse | OLTP vs OLAP
+- I32hmY4diFY # ETL Is Dead, Long Live Streams: real-time streams w/ Apache Kafka
+- jyxS2bvQGxc # The War on Big Tech - Everything is About to Change
+- c2Kf-rXI_pk # Google’s Hidden CIA Connection - The Full Story
+- p8N0xN0ihMA # Scandal and Betrayal: The Story of How Twitter Started
+
