--- a/ytube/_data/lists/capitalism-keys.yml
+++ b/ytube/_data/lists/capitalism-keys.yml
@@ -9,6 +9,7 @@
 - c0bsKc4tiuY # Why you should make useless things | Simone Giertz
 - m1TzDfr77Z8 # Date Limite : 20 juillet 2019, Tenons bon !
 - IVLmkxP6xvk # Keiser Report: American Capitalist Cancer (E1251)
+- Bfe0GfRNIJg # Elon Musk on the Mass Exodus of Business from California
 - th3KE_H27bs # The dirty secret of capitalism -- and a new way forward | Nick Hanauer
 - QozGSS7QY_U # Panic: The Untold Story of the 2008 Financial Crisis | Full VICE Special Report | HB
 - QE3QwTA5ujE # Jamie Dimon On The 2008 Crisis
