--- a/ytube/_data/lists/clickbate-keys.yml
+++ b/ytube/_data/lists/clickbate-keys.yml
@@ -16,3 +16,4 @@
 - VmI1vSAoFNw # How Much Money Does My Small 9,000 Subscriber YouTube Channel Make?
 - JJ-ogw8AZ3o # Here’s why Mr Beast is a GENIUS - How He Grew his YouTube Channel
 - zm5kOHmmcRc # Mistakes Youtubers are Making in 2020 that are HURTING Your Channel
+- 6HERP5D6QYk # Dear New Youtubers.. Stop Doing This
