--- a/ytube/_data/lists/coding-keys.yml
+++ b/ytube/_data/lists/coding-keys.yml
@@ -18,4 +18,5 @@
 - wCl9kvQGHPI # Cracking the Facebook Coding Interview The Approach
 - HXNhEYqFo0o # Programming Loops vs Recursion - Computerphile
 - jdqsiFw74Jk # Youtube Data API v3 & jQuery To List Channel Videos
+- Hfx6abgccWg # My 3 Simple Rules to Learn to Code
 - TE66McLMMEw # YouTube Data API v3 Tutorial
