--- a/ytube/_data/lists/economy-keys.yml
+++ b/ytube/_data/lists/economy-keys.yml
@@ -23,6 +23,7 @@
 - V8kzYEQbHvs # What if we had an economy based on abundance: Faiza Syed at TEDxYouth@Winchester
 - bKhR9i5CGkA # How Socialism Ruined My Country
 - swB7Ivct8d8 # How we&#39;ll earn money in a future without jobs | Martin Ford
+- uj7A29_9Z3M # Why 97% Will Lose EVERYTHING After 2020! | Robert Kiyosaki
 - jT_Nui6PB_g # BILL GATES TALK ABOUT INTERNET, CRYPTO-TECHNOLOGY LIKE BITCOIN
 - KRA84HkMH5w # Capitalisme 1/6 (2015)
 - QX3M8Ka9vUA # The Third Industrial Revolution: A Radical New Sharing Economy
