--- a/ytube/_data/lists/future-keys.yml
+++ b/ytube/_data/lists/future-keys.yml
@@ -6,6 +6,7 @@
 - FVVT8EBqK3g # What Will Happen In One Billion Years?
 - wpAHQuq-7GE # Sophia Robot Agenda 2030
 - rnBAdnNIIXk # Robots And AI: The Future Is Automated And Every Job Is At Risk [Automation, Pt. 1] | AJ+ Docs
+- F9-D39fyQCU # We should TAKE ACTION as Quickly as We Can - Elon Musk | Create Quantum Wealth 2021
 - MhAux0Mp_vU # HUMANOID ROBOT SOPHIA SPEAKS OUT AT THE UNITED NATION 2018 (MUST SEE)
 - hWe62uHpikY # The Bible says this is exactly how it would look before the End (2017-2018)
 - uQ91AxUqHck # Planet Earth 100 Million Years In The Future - What will happen to our world? - HD Full Documentary
