--- a/ytube/_data/lists/politics-keys.yml
+++ b/ytube/_data/lists/politics-keys.yml
@@ -9,6 +9,8 @@
 - aYsZv9JXmio # Prime Minister Jacinda Ardern Explains Why The UN Laughed At Trump
 - rELHUMNt4HM # The awkward debate around Trump's mental fitness
 - TJlpS4vhKP0 # Alexandria Ocasio-Cortez calls out Trump in five-minute corruption game
+- sqhvcrOPOXE # Donald Trump Vs Nancy Pelosi: The Most Epic Clashes of All Time
 - UYMIgnw2FPU # Why Fox News just can't quit Donald Trump
 - 9kZO5onGPbQ # Trump plans to leave White House with 'military-like feel' | GMA
 - ryJkz4WdE3o # Alexandria Ocasio-Cortez Faces Down Pro-Trump Troll | NowThis
+- Rg9iGvd5qb8 # My last talk with President Trump | Rudy Giuliani
