--- a/ytube/_data/lists/seen-keys.yml
+++ b/ytube/_data/lists/seen-keys.yml
@@ -1,6 +1,12 @@
 --- 
 - X3qSHcbSnLU # Bitcoin and blockchain: global development game changers?
 - 54gwAHagA2U # 99 CHOSES QUI N’ARRIVENT QU’EN ALLEMAGNE | Lama Faché
+- tCnzsfkzRWI # PandoDaily’s Sarah Lacy Says Uber Threatened Her
+- 4mJcbQC96vk # Immigration Officer Outsmarts Man WIth Fake Documents | UK Border Force | Real Responders
+- i3Nz4IhFGgw # Tired Teacher Puts on 'Happy Face' Before Class | NowThis
+- _VcNQmAL6jc # Meet the Tech Journalist Silicon Valley Hates
+- F7SIAdl_Hps # Sarah Lacy: Uber CEO Travis Kalanick is Morally Corrupt
+- 5VLj0z-Es-M # Very Cucked Trump Doesn't Pardon Assange
 - RgkghUvC6PA # 6 Psychological Tricks To Command Respect Instantly
 - rf9qK9QTlq0 # Tiwanaku / Pumapunku Megaliths are Artificial Geopolymers
 - UUDJoHeJbzw # Obviously I need another channel update
@@ -11,6 +17,9 @@
 - qkN8gYXiXdI # Time & Space: Concept or Reality? Is Time Travel Really Possible ? || Sadhguru || Adiyogi
 - brhA0Gc3OIs # 10 Facts About Ashley Alban
 - oF1SUYhDjZ8 # THE UNIVERSE, THE MIND
+- T6Je9vVE_R0 # Sarah Lacy accepts the Ice Bucket Challenge
+- tY-IYY0yJdE # Elon Musk Funniest Moments
+- fgQPj90OrQE # Why Uber Is A Scam - Math Explains
 - GYQRVn8ttwM # "I Can Teach You How to Program The Subconscious Mind" - Dr. Bruce Lipton - An Eye Opening Speech
 - z7zLh3k2hrA # Pourquoi j'ai arrêté le porno (conférence)
 - hGyeo8dihq8 # Un Prof Français révèle un vieux secret qui dirige le Monde!!
@@ -18,6 +27,7 @@
 - cxdwEOpGknk # Emily Browning - Sweet Dreams
 - O6xWhWnI6t4 # LIVING WATERS: Sound Frequencies & CYMATICS
 - 7wCFo1G-pP0 # 5G The Elephant in Your Living Room (via: thecrowhouse)
+- eCL2zEg1rP0 # Elon Musk Calls Robert Reich A Moron
 - aF9iC2SjBhw # IDRISS ABERKANE - LA GRATITUDE VA SAUVER NOTRE MONDE
 - fIm9bwxkgpw
 - K-Kd14lwuyI # 1 Hour of Beautiful Celtic Fantasy Music | The Dream Weaver
@@ -2068,6 +2078,8 @@
 - i1TVZIBj7UA # The Origin of Quantum Mechanics (feat. Neil Turok)
 - mMqVoUQVlCU # Astor Piazzolla - Vuelvo al Sur - Tango for Violin and Piano
 - R0TAdMY9OBU # Hit the road Jack!
+- bvK-Li6tAEo # I got rejected by Google
+- J49el9Fl8lM # Google Interview Experience | Accepted... then Rejected
 - RiD4a5Xkma8 # AGAINST MYSELF - Through The End Of Times (OFFICIAL VIDEO)
 - HUWZBPXCTCM # Lana Del Rey - Blue Jeans (PatrickReza Dubstep Remix) HQ
 - vvzLbJrOnmc # Tango-Vals &quot;Flor de Lino&quot;. María Inés Bogado &amp; Sebastián Jiménez with &quot;Solo Tango&quot; orchestra. Танго
