--- a/ytube/_data/lists/tech-education-keys.yml
+++ b/ytube/_data/lists/tech-education-keys.yml
@@ -2,11 +2,17 @@
 - iANBytZ26MI # What Is Hadoop? | Introduction To Hadoop | Hadoop Tutorial For Beginners | Simplilearn
 - 9s-vSeWej1U # What is Hadoop?
 - ZS_kXvOeQ5Y # SQL vs NoSQL or MySQL vs MongoDB
+- sHPY8zIhy60 # What is Data Governance?
 - BgQFJ_UNIgw # What is NoSQL?
 - QngDInV2ino # Why Hadoop is Dying
 - v3yv88h68GY # What is a Data Lake?
 - 2PVzOHA3ktE # Hadoop vs Spark | Hadoop And Spark Difference | Hadoop And Spark Training | Simplilearn
 - 4Gfl0WuONMY # Understanding HDFS using Legos
+- _dFJOSR-aFs # Service-Oriented Architecture
 - MfF750YVDxM # What is Hadoop?: SQL Comparison
 - Pq3OyQO-l3E # Introduction to Hadoop
 - nKW8Ndu7Mjw # The 7 steps of machine learning
+- kJcd6xVK2lY # ELT vs ETL - A Pizza Comparison
+- 7s_S5Hkm7z0 # What is Middleware? Service Oriented Architecture Explained
+- SZwd04-1LMA # An Introduction to Data Governance (Part 1 of 2)
+- G4uDWtGVsQc # An Introduction to Data Governance (Part 2 of 2)
