--- a/ytube/_data/lists/tech-watch-keys.yml
+++ b/ytube/_data/lists/tech-watch-keys.yml
@@ -4,4 +4,14 @@
 - 0Is_gfHTWM0 # How Square Makes Money
 - AwbKwcw7bgg # Data Lake VS Data Warehouse
 - ZZr9oE4Oa5U # Future of Data Engineering
-
+- IF5YrYiV0sA # ETL vs ELT
+- 6yG2myKcMQE # Apache Kafka vs. Integration Middleware (MQ, ETL, ESB) - Friends, Enemies or Frenemies?
+- dspdToaROn8 # DQ vs MDM
+- I32hmY4diFY # ETL Is Dead, Long Live Streams: real-time streams w/ Apache Kafka
+- vZhSbs1xLx4 # Get Rid of Traditional ETL, Move to Spark! (Bas Geerdink)
+- mDNGIqV2ThM # Building Real Time BI Systems with Kafka, Spark & Kudu: Spark Summit East talk by Ruhollah Farchtchi
+- YvVf97xeYkw # Neha Narkhede | Kafka Summit London 2019 Keynote | Event Streaming: Our Cloud-Native Journey Lessons
+- tpspO9K28PM # Four Distributed Systems Architectural Patterns by Tim Berglund
+- E8-e-3fRHBw # Managing Data in Microservices
+- UEg40Te8pnE # Introduction to Apache Kafka by James Ward
+- Hjae0Cw9oew # GOTO 2017 • Stream All Things - Patterns of Modern Data Integration • Gwen Shapira
