--- a/ytube/_data/ytlist.yml
+++ b/ytube/_data/ytlist.yml
@@ -62,6 +62,7 @@
 - freedom-keys
 - french-keys
 - future-keys
+- GAFA-keys
 - gcbank-keys
 - geek-keys
 - gender-keys
@@ -78,6 +79,7 @@
 - hippies-keys
 - humans-keys
 - ilike-keys
+- interviews-keys
 - ipfs-keys
 - IRMO-keys
 - kids-keys
@@ -86,6 +88,7 @@
 - loveburn2018-keys
 - love-keys
 - m4gc-keys
+- marketing-keys
 - maths-keys
 - medit-keys
 - meme-keys
