--- a/ytube/_data/lists/TEDs-keys.yml
+++ b/ytube/_data/lists/TEDs-keys.yml
@@ -2,6 +2,7 @@
 - wX78iKhInsc # How to escape education's death valley | Sir Ken Robinson
 - aspMV6ERqpo # The great filter | Robin Hanson | TEDxLimassol
 - q5yxIzs5Wug # How to translate the feeling into sound | Claudio | TEDxPerth
+- pczLRco6nyI # Jesse Draper at TEDxBayArea
 - sgWyolwBGgE # How do I deal with a bully, without becoming a thug? | Scilla Elworthy | TEDxExeter
 - MknV3t5QbUc # Game theory challenge: Can you predict human behavior? - Lucas Husted
 - 0R9zjn9BBvA # You are fluent in this language (and don&#39;t even know it) | Christoph Niemann
