playlist update on 07/04/21:\n diff --git a/ytube/README.md b/ytube/README.md index 10c6997..f8daaa7 100644 --- a/ytube/README.md +++ b/ytube/README.md @@ -5,0 +6,10 @@ my playlists are at : + + +### build process : + +```sh +cd _playlists +sh doit +cd .. + +``` diff --git a/ytube/_data/lists/chill-deep-keys.yml b/ytube/_data/lists/chill-deep-keys.yml index f4ceb5e..b2ff5fc 100644 --- a/ytube/_data/lists/chill-deep-keys.yml +++ b/ytube/_data/lists/chill-deep-keys.yml @@ -19,0 +20 @@ +- OKW018foQmg # Ibiza Summer Mix 2020 🍓 Best Of Tropical Deep House Music Chill Out Mix By Deep Legacy #87 @@ -23,0 +25 @@ +- R-Dt8gDfbew # New Year Mix 2021 | Ed Sheeran, Kygo, Avicii, Martin Garrix, Dua Lipa | Deep & Vocal House #4 @@ -26,0 +29 @@ +- R-Dt8gDfbew # New Year Mix 2021 | Ed Sheeran, Kygo, Avicii, Martin Garrix, Dua Lipa | Deep & Vocal House #4 diff --git a/ytube/_data/lists/medit-keys.yml b/ytube/_data/lists/medit-keys.yml index c016dd0..c888534 100644 --- a/ytube/_data/lists/medit-keys.yml +++ b/ytube/_data/lists/medit-keys.yml @@ -15,0 +16 @@ +- piW3-09Zk_E # OM Mantra Chants @ 174Hz for Pain Relief @@ -18,0 +20,2 @@ +- Ku75BIfodI0 # Sacred Chants Of Tibet - The Gyuto Monks Tantric Choir | Chants for Protection and Good Fortune +- Y-knD-U7_ik # 9 GOLDEN MANTRAS | 108 Times diff --git a/ytube/_data/lists/metal-keys.yml b/ytube/_data/lists/metal-keys.yml index a517c96..d2f0810 100644 --- a/ytube/_data/lists/metal-keys.yml +++ b/ytube/_data/lists/metal-keys.yml @@ -48,0 +49 @@ +- yLn5nK5MBUU # 20 Greatest Symphonic Metal Songs NON STOP ★ VOL. 4 diff --git a/ytube/_data/lists/music-keys.yml b/ytube/_data/lists/music-keys.yml index 9f89a4c..d7be5ad 100644 --- a/ytube/_data/lists/music-keys.yml +++ b/ytube/_data/lists/music-keys.yml @@ -4,0 +5,3 @@ +- 1TO48Cnl66w # Dido - Thank You (Official Music Video) +- j-fWDrZSiZs # Dido - White Flag (Official Music Video) +- coGLk2Clq3g # Linkin Park - In The End (Piano cover by Gamazda) @@ -12,0 +16 @@ +- NPcyTyilmYY # Alanis Morissett

--- a/ytube/_data/lists/all-videos-keys.yml
+++ b/ytube/_data/lists/all-videos-keys.yml
@@ -4566,7 +4566,6 @@
 - Gw1I7fqmxmA # This Indian Mystic Drops KNOWLEDGE BOMBS (I’m Speechless!) | Sadhguru on Impact Theory
 - 2va3j-Ub3B0 # Meditate by Letting Your Mind Be As It Is – Yongey Mingyur Rinpoche
 
-
 - aqhzFd4NUPI # Hooked, Hacked, Hijacked: Reclaim Your Brain from Addictive Living: Dr. Pam Peeke at TEDxWallStreet
 - \-Osa9YIl6R0 # How I Made My Mind My Bitch (Or, How To Hack Your Effectiveness) (Dave Asprey)
 - f2bY6vLgARk # IPFS - DAppHack Berlin 2016
@@ -4888,7 +4887,6 @@
 # the MikCol list
 - TWNYHiJoKXw # dancing for a cause, dancing for the children (2gether)
 - 5eUoGjWe8R8 # Natural (Tango Colleen y Michel) 2019 12 15 at 9 19 37 PM
-
 
 - fAqtI9XgQic # "Upside Down" tango scene
 - nhZdL4JlnxI # Depeche Mode - World In My Eyes (Official Video)
@@ -12756,20 +12754,6 @@
 - auUxw1L-LMQ
 - QnyMBkfTFpI
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 - -n61in9QWbc # Collective Decision Making Meeting pt1
 - -58E07lNAdk
 - -z1jqMgp1NU # The Deadly Bitcoin Mistake You Are Probably Making
@@ -12800,8 +12784,6 @@
 - -Xn6IDytVGw # National Geographic Documentary: Year Million (Artificial Intelligence)
 - -3tW2uJA0-g # The Castration Dynamic - Teal Swan
 
-
-
 - -Osa9YIl6R0 # How I Made My Mind My Bitch (Or, How To Hack Your Effectiveness) (Dave Asprey)
 - -tOTX7oI5Vs # A Geometry of Consciousness -- The Pribram Bohm Hypothesis
 
@@ -12810,8 +12792,6 @@
 
 - -GVKq0tSqV0 # Romantic music for making love instrumental
 - -Qp518Zts8c # Dreaming of India: Oriental Lounge Music
-
-
 
 - -8ahuu6V78E # Club des Belugas - Tarrango *k~kat café au lait*
 - -HL3PPNrUhU # Wie Man Ein Genie Ist
@@ -12842,7 +12822,6 @@
 - -OLFwkfPxCg # The weirdness of water could be the answer | Marcia Barbosa | TEDxCERN
 - -KysuBl2m_w # Choices that can Change your Life | Caroline Myss | TEDxFindhornSalon
 
-
 - -OLFwkfPxCg
 
 - -FrtlRFIwpU # Friv Games DoodieMan 3   doodie man 2015 Funny   Best free online games   Games for girls boys
@@ -12872,83 +12851,13 @@
 - -JwhFMH7OM4
 - -GVKq0tSqV0
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 - rXCHn9B5dH0 # The Machine That Erases What It Creates
-
-
-
-
-
-
-
-
-
-
 
 - PMma3OJUHhs # A Permanent Magnet That Turns On and Off
 
-
-
-
-
-
-
 - x6UITRjhijI # Tibetan Healing Sounds: Cleans the Aura and Space. Removes all negative energy
 
-
-
 - x6UITRjhijI # Tibetan Healing Sounds: Cleans the Aura and Space. Removes all n
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 - xWyJ0gO7bh8 # Visualizing Bitcoin Blockchain Block Hashes
 - jP7pEgBpaO0 # Bitcoin Q&A: Passphrases and Seed Storage
@@ -12992,13 +12901,6 @@
 - 5o_DODh3Yfc # 'Fuming': How Trump is reacting to his second impeachment
 - 6WGKz2sUa0w # Why all solar panels are secretly LEDs (and all LEDs are secretly solar panels)
 
-
-
-
-
-
-
-
 - UJepAsi7NAQ # Rioter who beat police officer says 'death is the only remedy'
 - mx6MzHYzEfY # Ellen's Favorite Moments with Noah Ritter
 
@@ -13014,9 +12916,6 @@
 
 - wD6hyGXRcgk # TIMELAPSE OF FUTURE TECHNOLOGY: 2022 - 4000+
 - 0onncd0_0-o # Tensegrity Explained
-
-
-
 
 - oxzuAmE2DcA # I Reviewed 200 MrBeast Thumbnails to Prove THIS
 - dCt23D8VXpc # Tapper asks Gates when he thinks we'll be back to 'normal.' Hear his response
@@ -13034,21 +12933,13 @@
 - irHP3znqwq8 # How "fake news" and misinformation online is changing society
 - LW9I5OUHkXw # I've Stopped Asking People to Subscribe. You Should Too.
 
-
-
 - 7TpsYofbAPA # Meet a 12-year-old hacker and cyber security expert
 - jtqAqL3fn64 # The Untold Story of the First Vaccine
-
-
-
-
-
 
 - Y_1G4_oPt_o # Alexandria Ocasio Cortez: Trump Isn't Ready For A Girl From The Bronx
 - aYsZv9JXmio # Prime Minister Jacinda Ardern Explains Why The UN Laughed At Trump
 - UYMIgnw2FPU # Why Fox News just can't quit Donald Trump
 - 9kZO5onGPbQ # Trump plans to leave White House with 'military-like feel' | GMA
-
 
 - 2hmAeLYMrQg # Megaprojects: Terraforming The Sahara | Answers With Joe
 - fT8ElbZTGdg # Полина Гагарина - Спектакль окончен
@@ -13059,8 +12950,6 @@
 - YAxLueEKqmU # How Good Are Your Eyes? Cool and Quick Test
 - E1SDl9vLo8 # How Old Are Your Ears? (Hearing Test)
 - 8Z01336nDlU # Are You Fooled By These Audio Illusions?
-
-
 
 - 73QC3qw5b2Y # What do DATA ENGINEERS do? Is data engineering a good career choice in 2020?
 - -K9SjrWpeys # Data Engineering and Data Science: Bridging the Gap | DataEDGE 2016
@@ -13078,18 +12967,11 @@
 - BgQFJ_UNIgw # What is NoSQL?
 - cvhKoniK5Uo # MapReduce - Computerphile
 
-
-
 - NJ7M01jV058 # A Scientist Spilled 2 Drops Organic Mercury On Her Hand. This Is What Happened To Her Brain.
-
-
-
-
 
 - Z6RU1vegEW0 # Chinese billionaire Jack Ma has 'basically disappeared'
 
 - ryJkz4WdE3o # Alexandria Ocasio-Cortez Faces Down Pro-Trump Troll | NowThis
-
 
 - 4ro8sPOgCBg # Never Eat The ‘Clean’ Part Of Moldy Bread
 - MHS-htjGgSY # Game Theory: The Science of Decision-Making
@@ -13110,27 +12992,7 @@
 - lji-jNsXmAM # Renaissance Technologies - Trading Strategies Revealed | A Documentary
 - ZZr9oE4Oa5U # Future of Data Engineering
 
-
-
-
 - nE2NT_Wt46A # How Working Remotely Will Change More Than Work
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 - oF_2uDb7DvQ # What is ETL | What is Data Warehouse | OLTP vs OLAP
 - I32hmY4diFY # ETL Is Dead, Long Live Streams: real-time streams w/ Apache Kafka
@@ -13146,9 +13008,6 @@
 - uj7A29_9Z3M # Why 97% Will Lose EVERYTHING After 2020! | Robert Kiyosaki
 - F9-D39fyQCU # We should TAKE ACTION as Quickly as We Can - Elon Musk | Create Quantum Wealth 2021
 - Oh6iX6gDU6k # Why Facebook is Dying - And How it's Trying to Survive
-
-
-
 
 - y8H9Qgppb9E # Elon Musk - Why 97% Will Be Affected By This In The Near Future - Elon Musk Interview 2021.
 - aMeZKXuauUY # Mike Maples: Astronauts
@@ -13201,12 +13060,8 @@
 - 0nVNU5GFhm8 # How To Get Attention In The Market
 - aRAnI2PFfk4 # TOP DESIGN TRENDS 2021: Should You Follow Graphic Design Trends!?
 
-
-
-
 - sqhvcrOPOXE # Donald Trump Vs Nancy Pelosi: The Most Epic Clashes of All Time
 - Rg9iGvd5qb8 # My last talk with President Trump | Rudy Giuliani
-
 
 - tCnzsfkzRWI # PandoDaily’s Sarah Lacy Says Uber Threatened Her
 - 4mJcbQC96vk # Immigration Officer Outsmarts Man WIth Fake Documents | UK Border Force | Real Responders
@@ -13237,6 +13092,44 @@
 - UEg40Te8pnE # Introduction to Apache Kafka by James Ward
 - Hjae0Cw9oew # GOTO 2017 • Stream All Things - Patterns of Modern Data Integration • Gwen Shapira
 - pczLRco6nyI # Jesse Draper at TEDxBayArea
+
+- OKW018foQmg # Ibiza Summer Mix 2020 🍓 Best Of Tropical Deep House Music Chill Out Mix By Deep Legacy #87
+- R-Dt8gDfbew # New Year Mix 2021 | Ed Sheeran, Kygo, Avicii, Martin Garrix, Dua Lipa | Deep & Vocal House #4
+
+- piW3-09Zk_E # OM Mantra Chants @ 174Hz for Pain Relief
+- Ku75BIfodI0 # Sacred Chants Of Tibet - The Gyuto Monks Tantric Choir | Chants for Protection and Good Fortune
+- Y-knD-U7_ik # 9 GOLDEN MANTRAS | 108 Times
+- yLn5nK5MBUU # 20 Greatest Symphonic Metal Songs NON STOP ★ VOL. 4
+
+- 1TO48Cnl66w # Dido - Thank You (Official Music Video)
+- j-fWDrZSiZs # Dido - White Flag (Official Music Video)
+- coGLk2Clq3g # Linkin Park - In The End (Piano cover by Gamazda)
+- NPcyTyilmYY # Alanis Morissette - You Oughta Know (Official 4K Music Video)
+- 6ilx_3islIk # Two Steps From Hell - Secret Melody ( EXTENDED Remix by Kiko10061980 )
+- f2r6euMysl0 # Ders Çalışırken Dinlemelik Sakin Şarkılar (cello)
+- xecukJDAPcw # [Try Listening for 3 Minutes] - Open Third Eye - Pineal Gland Activation - Third Eye Stimulation
+- FQxIWlp_Q6s # NEW Quick Chakra Tune-Up - 2 Minutes Per Chakra - All Chakras - Chakra Music, Chakra Meditation
+- twfgsQxLX8Q # Music Of Angels • Music To Heal All Pains Of Body, Soul And Spirit, Calm The Mind, Meditate
+- KSbWyA6FeCw # All Night 7 Chakras Peaceful Flute & Water Healing Sleep & Meditation Music | Crystal Singing Bowls
+
+- HmpiqxHRrzs # Wiccan Goddess Chant
+- iL2psQTS-lw # Increase Brain Power, Enhance Intelligence, IQ to improve, Study Music, Binaural Beats
+- GpfpKBi82zM # Peruquois ритм
+- wvTzF9h4LAE # Strings of a Bard (acoustic) - Estas Tonne (2021)
+- w0IANdS3jhY # Музыка для женских практик
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
