--- a/ytube/_data/lists/chill-deep-keys.yml
+++ b/ytube/_data/lists/chill-deep-keys.yml
@@ -17,13 +17,16 @@
 - 1T8KDMnG-ps # Summer Mix 2018 | Best Popular Electro Club Dance Music Remixes 2018⚡️Kygo,Ed Sheeran,Stoto Inspire
 - xROLQS64PuA # Beautiful! Very Emotional and Gentle music for the Soul without Words ( 1 Hour)
 - jbm7Y2XsA3I # Boral Kibil - See Me Again ( Sunday Morning Mix) HD
+- OKW018foQmg # Ibiza Summer Mix 2020 🍓 Best Of Tropical Deep House Music Chill Out Mix By Deep Legacy #87
 - 1tSbJvAu5Wc # Erotic Lounge Bar Sexy Chill Out and Relax Session 2013
 - 1N27h4c8fgY # Wonderful Life ~💖~ Deep House, Tropical House Music 2018 Chill Out | Justin bieber, Kygo, Ed Sheeran
 - HQB_kSCB9Lo # Best Music Mix 2018 - Best Of EDM, Electro House, Bass | Shuffle Dance Music | Popular Songs 2018
 - D2vPFGVDYsw # Electro House Charts Mix 2017 | By Dropway | Best Remixes Mashups &amp; Of Popular Songs
+- R-Dt8gDfbew # New Year Mix 2021 | Ed Sheeran, Kygo, Avicii, Martin Garrix, Dua Lipa | Deep & Vocal House #4
 - C2WuOFYBbP0 # Sunset Chic ✭ Deep &amp; Cool House Vibes
 - iQ64aBj5ZFc # NEW GREEK MUSIC MIX 2018 MAY #2 ❄️ Ελληνικής Μουσικής ❄️ DJ SILVEN
 - Qr17wsjDHdo # 3LAU feat. Emma Hewitt - Worlds Away
+- R-Dt8gDfbew # New Year Mix 2021 | Ed Sheeran, Kygo, Avicii, Martin Garrix, Dua Lipa | Deep & Vocal House #4
 - YR5JD0Bws0Y # I GOT YOU - SEREDA [Official Video]
 - 9HmrfY0Eq6M # 5 HOURS Best Chillout Music 2018 | Balearic Chill Out Vibes Compilation 2 + Balearic Summertime 2
 - LX1wpLjJ8-8 # Oxia - Domino (Morten Granau Remix)
