--- a/ytube/_data/lists/medit-keys.yml
+++ b/ytube/_data/lists/medit-keys.yml
@@ -13,9 +13,12 @@
 - Nnztjp7rSlc # 🔴 Beautiful Piano Music: Relaxing Music, Study Music, Sleep Music, Meditation Music
 - ijfLsKg8jFY # Om 108 Times - Music for Yoga & Meditation
 - BxOw3Zy_GxA # 174 Hz || PAIN RELIEF SLEEP MUSIC || Deep Healing Music based on Solfeggio Frequencies
+- piW3-09Zk_E # OM Mantra Chants @ 174Hz for Pain Relief
 - KsMqhVfUC9w # 417 Hz Healing music - Let go of mental blockages, Remove negative energy, Ancient Frequency music
 - As-oVm6NDX0 # Sarah &amp; Amelia Brightman   &quot;Moment Of Peace&quot; feat. Gregorian
 - jG253f8CKfM # Tibetan Healing Sounds #1 -3 hours - Tibetan bowls for meditation, relaxation, calming, healing
+- Ku75BIfodI0 # Sacred Chants Of Tibet - The Gyuto Monks Tantric Choir | Chants for Protection and Good Fortune
+- Y-knD-U7_ik # 9 GOLDEN MANTRAS | 108 Times
 - K4ccN__EwAM # Schamanentrommel - 30 Minuten Heiltrommel für schamanische Reisen
 - 5cV5DHaVKv4 # Byron Metcalf  - Heart Warriors
 - zHDrHRmaQjQ # Anilah - Medicine Chant
