--- a/ytube/_data/lists/metal-keys.yml
+++ b/ytube/_data/lists/metal-keys.yml
@@ -46,4 +46,5 @@
 - Gr8dcweTyVw # Within Temptation at The Orchard: And We Run
 - E6TfJQBe3Js # Within Temptation - Iron - Unofficial Music Video
 - ?list=PLUCRZoK7sezr5KRjk7BBjmH6w
+- yLn5nK5MBUU # 20 Greatest Symphonic Metal Songs NON STOP ★ VOL. 4
 - XKwscPp1kLs # BABYMETAL - ヘドバンギャー！！- Headbangeeeeerrrrr!!!!!!! (OFFICIAL)
