--- a/ytube/_data/lists/music-keys.yml
+++ b/ytube/_data/lists/music-keys.yml
@@ -2,6 +2,9 @@
 - Pfm8M3q-4TY # Cozy Coffee Shop Ambience with Relaxing Jazz Music and Rain Sounds, Rainy Night & Smooth Jazz Music
 - MPFTY-b4WYE # Deep Feelings Mix | Deep House, Vocal House, Nu Disco, Chillout #62
 - oVkRJDpBh3I # Art of Melodic Techno & House 24/7 Live Radio | Best Relax House, Chillout, Study by Trippy Code
+- 1TO48Cnl66w # Dido - Thank You (Official Music Video)
+- j-fWDrZSiZs # Dido - White Flag (Official Music Video)
+- coGLk2Clq3g # Linkin Park - In The End (Piano cover by Gamazda)
 - aKJvbTEnp0I # LIGHT IN BABYLON - Hinech Yafa - Istanbul
 - HV4YGZ4MWdY # Morven Brown - Back To Black
 - _7wKjTf_RlI # Max Cooper - Order From Chaos (official video by Maxime Causeret)
@@ -10,6 +13,7 @@
 - r97bzs3fyTY # Anoushka Shankar - Bhairavi - Live from Girona
 - wTQxiGJzR_I # Lola Marsh - She's a Rainbow
 - UPcPtd3k-Qg # London Grammar - Truth Is a Beautiful Thing (Lyric Video)
+- NPcyTyilmYY # Alanis Morissette - You Oughta Know (Official 4K Music Video)
 - oygrmJFKYZY # Dua Lipa - Don't Start Now (Official Music Video)
 - G-UnzRM24IM # HAIM - Now I'm In It
 - 0xLv1OTYXEI # Lullaby - cover The Cure by Grand Square Dance
@@ -1166,4 +1170,6 @@
 - EZMOh9TglsI # Emeli Sandé - Hurts - Live at the BRIT Awards 2017
 - CC6vDsm1dXQ # Ella Henderson sings Evanescence&#39;s Bring Me To Life - Live Week 4 - The X Factor UK 2012
 - YFw4hlFSXe4 # Everybody's Gotta Learn Sometimes - Beck
+- 6ilx_3islIk # Two Steps From Hell - Secret Melody ( EXTENDED Remix by Kiko10061980 )
+- f2r6euMysl0 # Ders Çalışırken Dinlemelik Sakin Şarkılar (cello)
 - 2FdP0eS47ts # Mazzy Star - Fade Into You - 10/2/1994 - Shoreline Amphitheatre (Official)
