--- a/ytube/_data/lists/new-age-keys.yml
+++ b/ytube/_data/lists/new-age-keys.yml
@@ -14,3 +14,7 @@
 - 5xTX7uTjaxs # HAVASI — Prelude | Age of Heroes (Official Video)
 - 7_XoKJP1XK4 # Evanescence - Imperfection
 - 4wtG01ymIjE # 432Hz - The DEEPEST Healing | Let Go Of All Negative Energy - Healing Meditation Music 432Hz
+- xecukJDAPcw # [Try Listening for 3 Minutes] - Open Third Eye - Pineal Gland Activation - Third Eye Stimulation
+- FQxIWlp_Q6s # NEW Quick Chakra Tune-Up - 2 Minutes Per Chakra - All Chakras - Chakra Music, Chakra Meditation
+- twfgsQxLX8Q # Music Of Angels • Music To Heal All Pains Of Body, Soul And Spirit, Calm The Mind, Meditate
+- KSbWyA6FeCw # All Night 7 Chakras Peaceful Flute & Water Healing Sleep & Meditation Music | Crystal Singing Bowls
