--- a/ytube/_data/lists/work-music-keys.yml
+++ b/ytube/_data/lists/work-music-keys.yml
@@ -45,6 +45,7 @@
 - 0dFz10R529g # Gareth Emery feat. Christina Novelli - Concrete Angel [Official Music Video]
 - gsQIOgkZt68 # Within Temptation - Memories
 - O-zpOMYRi0w # Iggy Azalea - Fancy (Explicit) ft. Charli XCX
+- iL2psQTS-lw # Increase Brain Power, Enhance Intelligence, IQ to improve, Study Music, Binaural Beats
 - UZ-LvXT1Jeg # My Indigo - Where Is My Love (Lyric Video)
 - QIedr_9_9hA # SEMBLANT - What Lies Ahead (Official Video)
 - NaAm-rSyAVI # Calm down ANXIETY: just listen and breathe . . .
