--- a/ytube/_data/lists/wuotai-music-keys.yml
+++ b/ytube/_data/lists/wuotai-music-keys.yml
@@ -1,6 +1,7 @@
 --- 
 - s1SuqX3VKOU # נתנאל גולדברג - HOLY
 - hn10okvX19E # Bird's Teardrops - Peia Luzzi, Estas Tonne - Ashland, Oregon 2018
+- GpfpKBi82zM # Peruquois ритм
 - 9uaOhC98-jc # Om ahh hum by Jane Winther : unisound.dk
 - eJwSZIajEvI # Dhafer Youssef - Soupir Eternel
 - on1QEcz1sTI # London Grammar - Hey Now (Radio 1's Big Weekend 2014)
@@ -91,6 +92,7 @@
 - zOvsyamoEDg # FAUN - Federkleid (Offizielles Video)
 - DGQ1kzBoImY # Tibetische Meditationsmusik, Entspannende Musikmeditation, Yoga, Binaurale Takte, ✿3186C
 - sTgElQpyrvY # Estas Tonne -  place of the Gods full album
+- wvTzF9h4LAE # Strings of a Bard (acoustic) - Estas Tonne (2021)
 - zHDrHRmaQjQ # Anilah - Medicine Chant
 - XrX9nR6j9zw # Unser Highlight: Sound &amp; Silence Festival. Estas Tonne, Joseph Pepe Danza, Netanel Goldberg
 - BIRJMESl4U8 # 3 HOURS Relaxation Powerful Meditation | Tibetan Monks Chanting | Singing Bowls | Background Yoga
@@ -100,4 +102,5 @@
 - szfu1DV3pR8 # Unveiled Mystery - Estas Tonne ‖ Netanel Goldberg ‖ Joseph Pepe Danza
 - -fsZcUhCDpE # Angèlia Grace – Time (Inception) by Hans Zimmer [cover]
 - hnXD6FRZtn0 # Skyrim - The Dragonborn Comes - Swedish Radio Symphony Orchestra / Sabina Zweiacker
+- w0IANdS3jhY # Музыка для женских практик
 - Pj4q0Mc08EY # 2 HOURS Hypnotic SHAMANIC MEDITATION MUSIC Healing Music for the Soul, Tuvan Chakra Cleansing
